2012/02/10 (TS):
 - drvLan9118.c: Attempt to do a hard reset first thing during
   initialization (drvLan9118Setup()). However, this only works
   if the reset line (nReset) is tied to a GPIO pin on the uC5282.
   This is the case with the current PAD design but the PAC does
   *not* feature this connection.
 - drvLan9118.c: Cleaned up endianness detection and handling.
   Should now work for all cases (including 32-bit port size).
   Added more comments explaining the endianness issues including
   a table exploring all possibilities of ENDIAN, cross-wiring
   and software-byte swapping.
 - drvLan9118.c: Fixed stdint 'printf' formats using macros
   from <inttypes.h>.
 - lanIpBasicTest.c: made timeouts for udpBouncer global variables
   (in milli-seconds) allowing for tuning them.
2011/09/29 (TS):
 - lanIpBasic.h: export/declare lanIpBscAddBufs().
2011/09/29 (TS):
 - Makefile.am:    added rules to Makefile.am to build + clean PDF
 - lanIpBasic.tex: further work.
 - lanIpBasic.h, lanIpBasicSetup.h: added comment that ethernet addresses
                   are arrays of 6 octets
2011/09/29 (TS):
 - added lanIpBasic.tex
2011/07/21 (TS):
 - e1k_lldrv.c: BUGFIX - only first unit would be accepted because
   return values of pci_scan() (== unit) other than zero were rejected.
   Accept any that is not -1.
2011/07/21 (TS):
 - e1k_lldrv.c: register/unregister this driver with e1000 generic
   support (new feature of e1000_osdep).
2011/04/19 (TS):
 - lanIpBasic.c, lanIpBasic.h: added udpSockRefBuf().
2010/06/30 (TS):
 - lanIpBasic.c: Let udpSockDestroy() return ENXIO instead of EBADFD
   (not POSIX and gone in newlib-1.18/rtems-4.10) if the socket had no
   queue attached.
2010/06/16 (TS):
 - drvLan9118.c: BUGFIX -- ISR was installed and interrupts enabled BEFORE
   the daemon task executed. Thus it could happen that interrupts were lost
   (because the RTEMS event was posted to an invalid TID or to one that